# SlicerRT

./: .clang-format  .gitmodules  CMakeLists.txt  CTestConfig.cmake  DicomRtImport.s4ext  DoseAccumulation.s4ext  DoseVolumeHistogram.s4ext  GammaDoseComparison.s4ext  LICENSE.txt  README.md  SlicerDashboardDriverScript.cmake  SuperBuild.cmake  readme.txt
Beams/Logic/: CMakeLists.txt  vtkMRMLBeamsNode.cxx  vtkMRMLBeamsNode.h  vtkSlicerBeamsModuleLogic.cxx  vtkSlicerBeamsModuleLogic.h  vtkSlicerIECTransformLogic.cxx  vtkSlicerIECTransformLogic.h  vtkSlicerMLCPositionLogic.cxx  vtkSlicerMLCPositionLogic.h
Contours/: CMakeLists.txt  qSlicerContoursModule.cxx  qSlicerContoursModule.h  qSlicerContoursModuleWidget.cxx  qSlicerContoursModuleWidget.h  qSlicerContoursReader.cxx  qSlicerContoursReader.h
Contours/Logic/: CMakeLists.txt  vtkSlicerContoursModuleLogic.cxx  vtkSlicerContoursModuleLogic.h  vtkSlicerContoursPatientHierarchyPlugin.cxx  vtkSlicerContoursPatientHierarchyPlugin.h
Contours/MRML/: CMakeLists.txt  vtkCalculateOversamplingFactor.cxx  vtkCalculateOversamplingFactor.h  vtkConvertContourRepresentations.cxx  vtkConvertContourRepresentations.h  vtkMRMLContourHierarchyNode.cxx  vtkMRMLContourHierarchyNode.h  vtkMRMLContourModelDisplayNode.cxx  vtkMRMLContourModelDisplayNode.h  vtkMRMLContourNode.cxx  vtkMRMLContourNode.h  vtkMRMLContourStorageNode.cxx  vtkMRMLContourStorageNode.h
Contours/Plugins/: CMakeLists.txt  (+4 more)
DicomRtExport/: CMakeLists.txt  qSlicerDicomRtExportModule.cxx  qSlicerDicomRtExportModule.h  qSlicerDicomRtExportModuleWidget.cxx  qSlicerDicomRtExportModuleWidget.h
DicomRtImport/: CMakeLists.txt  DicomRtImportPlugin.py  qSlicerDicomRtImportModule.cxx  qSlicerDicomRtImportModule.h  qSlicerDicomRtImportModuleWidget.cxx  qSlicerDicomRtImportModuleWidget.h
DicomRtImportExport/: CMakeLists.txt  DicomRtImportExportPlugin.py  qSlicerDicomRtImportExportModule.cxx  qSlicerDicomRtImportExportModule.h  qSlicerDicomRtImportExportModuleWidget.cxx  qSlicerDicomRtImportExportModuleWidget.h
Docs/: CMakeLists.txt
Docs/user_guide/: Plastimatch.md
DoseAccumulation/: CMakeLists.txt  qSlicerDoseAccumulationModule.cxx  qSlicerDoseAccumulationModule.h  qSlicerDoseAccumulationModuleWidget.cxx  qSlicerDoseAccumulationModuleWidget.h
DoseComparison/: CMakeLists.txt  qSlicerDoseComparisonModule.cxx  qSlicerDoseComparisonModule.h  qSlicerDoseComparisonModuleWidget.cxx  qSlicerDoseComparisonModuleWidget.h
DoseVolumeHistogram/: CMakeLists.txt  DoseVolumeHistogram.py  qSlicerDoseVolumeHistogramModule.cxx  qSlicerDoseVolumeHistogramModule.h  qSlicerDoseVolumeHistogramModuleWidget.cxx  qSlicerDoseVolumeHistogramModuleWidget.h
ExternalBeamPlanning/: CMakeLists.txt  qSlicerExternalBeamPlanningModule.cxx  qSlicerExternalBeamPlanningModule.h  qSlicerExternalBeamPlanningModuleWidget.cxx  qSlicerExternalBeamPlanningModuleWidget.h
GammaDoseComparison/: CMakeLists.txt  qSlicerGammaDoseComparisonModule.cxx  qSlicerGammaDoseComparisonModule.h  qSlicerGammaDoseComparisonModuleWidget.cxx  qSlicerGammaDoseComparisonModuleWidget.h
Isodose/: CMakeLists.txt  qSlicerIsodoseModule.cxx  qSlicerIsodoseModule.h  qSlicerIsodoseModuleWidget.cxx  qSlicerIsodoseModuleWidget.h
LeakFinder/: 0001-LeakFinder-patch.patch  CMakeLists.txt  StackWalker.cxx  VTK_5.10.0_LeakFinder.patch  _howToUse.txt  vtkLeakFinder.cxx  vtkLeakFinder.h
MatlabCommander/: CMakeLists.txt  MatlabCommander.cxx  MatlabCommander.xml  StartMatlabCommandServer.bat
PlmCommon/: CMakeLists.txt  PlmCommon.cxx  PlmCommon.h  vtkPlmCommonConfigure.h.in  vtkPlmCommonWin32Header.h
PlmDrr/: CMakeLists.txt  plastimatch_slicer_drr.cxx  plastimatch_slicer_drr.xml  qSlicerPlmDrrModule.cxx  qSlicerPlmDrrModule.h  qSlicerPlmDrrModuleWidget.cxx  qSlicerPlmDrrModuleWidget.h
PlmXformwarp/: CMakeLists.txt  plastimatch_slicer_xformwarp.cxx  plastimatch_slicer_xformwarp.xml
SegmentationCore/: CMakeLists.txt  vtkBinaryLabelmapToClosedSurfaceConversionRule.cxx  vtkBinaryLabelmapToClosedSurfaceConversionRule.h  vtkCalculateOversamplingFactor.cxx  vtkCalculateOversamplingFactor.h  vtkClosedSurfaceToBinaryLabelmapConversionRule.cxx  vtkClosedSurfaceToBinaryLabelmapConversionRule.h  vtkOrientedImageData.cxx  vtkOrientedImageData.h  vtkOrientedImageDataResample.cxx  vtkOrientedImageDataResample.h  vtkPlanarContourToClosedSurfaceConversionRule.cxx  vtkPlanarContourToClosedSurfaceConversionRule.h  vtkSegment.cxx  vtkSegment.h  vtkSegmentation.cxx  vtkSegmentation.h  vtkSegmentationConverter.cxx  vtkSegmentationConverter.h  vtkSegmentationConverterFactory.cxx  vtkSegmentationConverterFactory.h  vtkSegmentationConverterRule.cxx  vtkSegmentationConverterRule.h  vtkSegmentationCoreConfig.cmake.in  vtkSegmentationCoreConfigure.h.in  vtkTopologicalHierarchy.h
SlicerRtCommon/: CMakeLists.txt  SlicerRtCommon.cxx  SlicerRtCommon.h  SlicerRtCommon.txx  vtkCollisionDetectionFilter.cxx  vtkCollisionDetectionFilter.h  vtkFractionalImageAccumulate.cxx  vtkFractionalImageAccumulate.h  vtkFractionalPolyDataToImageStencil.cxx  vtkFractionalPolyDataToImageStencil.h  vtkImageResliceMask.cxx  vtkImageResliceMask.h  vtkLabelmapToModelFilter.cxx  vtkLabelmapToModelFilter.h  vtkMRMLContourHierarchyNode.cxx  vtkMRMLContourHierarchyNode.h  vtkMRMLContourNode.cxx  vtkMRMLContourNode.h  vtkPolyDataToFractionalLabelMap.cxx  vtkPolyDataToFractionalLabelMap.h  vtkPolyDataToLabelmapFilter.cxx  vtkPolyDataToLabelmapFilter.h  vtkSlicerAutoWindowLevelLogic.cxx  vtkSlicerAutoWindowLevelLogic.h  vtkSlicerDicomReaderBase.cxx  vtkSlicerDicomReaderBase.h  vtkSlicerDicomReaderBase.txx  vtkSlicerRtCommon.cxx  vtkSlicerRtCommon.h  vtkSlicerRtCommon.txx  vtkSlicerRtCommonConfigure.h.in  vtkSlicerRtCommonWin32Header.h  vtkVolumesOrientedResampleUtility.cxx  vtkVolumesOrientedResampleUtility.h
VffFileReader/: CMakeLists.txt  qSlicerVffFileReaderModule.cxx  qSlicerVffFileReaderModule.h  qSlicerVffFileReaderOptionsWidget.cxx  qSlicerVffFileReaderOptionsWidget.h  qSlicerVffFileReaderPlugin.cxx  qSlicerVffFileReaderPlugin.h  qSlicerVffFileReaderPluginWidget.cxx  qSlicerVffFileReaderPluginWidget.h
(+1810 files in other folders)
